[package]
name = "yamakagashi"
version = "0.1.0"
edition = "2021"
description = "This is yamakagashi image compression tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["yamakagashi_core"]

[dependencies]
clap = { version = "4.5.4", features = ["cargo"]}
byteorder = "1.5.0"
yamakagashi-core = { path = "yamakagashi_core"}